--- a/index.html
+++ b/index.html
@@ -10,23 +10,28 @@
 <body>
     <h1 class="titulo__pagina p-3">Ordenando Valores</h1>
     <div class="col-5 p-3 border-bottom">
-        <div class="mb-3">
-            <label for="formGroupExampleInput2" class="form-label">Valor</label>
-            <input type="text" class="form-control" id="texto" placeholder="">
+        <form action="" id="novoItem">
+            <div class="mb-3">
+                <label for="formGroupExampleInput2" class="form-label">Valor</label>
+                <input type="text" class="form-control" id="elemento" placeholder="">
+            </div>
+            <button class="btn btn-primary p-2 mb-3" id="btn-adicionar" type="submit">Adicionar</button>
+            <button class="btn btn-primary p-2 mb-3" id="btn-limpar" type="submit">Limpar</button>
+        </form>
+        <div id="trocaElementos">
+            <select class="form-select" id="" aria-label="Default select example">
+                <option id="bubble_sort" value="1">Bubble Sort</option>
+                <option id="sorted" value="2">Sorted</option>
+                <option id="quick_sorte" value="3">Quick Sort</option>
+            </select>
+            <button class="btn btn-primary mt-3 p-2" id="btn-ordenar" type="submit">Ordenar</button>
+            <button class="btn btn-primary ms-3 mt-3 p-2" id="btn-misturar" type="submit">Misturar</button>
         </div>
-        <button onclick="add()" class="btn btn-primary p-2 mb-3"  type="submit">Adicionar</button>
-        <button onclick="limpar()" class="btn btn-primary p-2 mb-3"  type="submit">Limpar</button>
-        <select class="form-select" aria-label="Default select example">
-            <option value="1">Bubble Sort</option>
-            <option value="2">Sorted</option>
-            <option value="3">Quick Sort</option>
-        </select>
-        <button class="btn btn-primary mt-3 p-2" type="submit">Ordenar</button>
-        <button class="btn btn-primary ms-3 mt-3 p-2" type="submit">Misturar</button>
     </div>
     <ul id="valores"></ul>
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
     <script src="ordenando.js"></script>
+    <script src="teste.js"></script>
 </body>
 </html>
