--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
             <button class="btn btn-primary p-2 mb-3" id="btn-limpar" type="submit">Limpar</button>
         </form>
         <div id="trocaElementos">
-            <select class="form-select" id="" aria-label="Default select example">
-                <option id="bubble_sort" value="1">Bubble Sort</option>
-                <option id="sorted" value="2">Sorted</option>
-                <option id="quick_sorte" value="3">Quick Sort</option>
+            <select class="form-select" id="organiza" aria-label="Default select example" onchange="atualizarSelect()">
+                <option id="" value="bubble_sort">Bubble Sort</option>
+                <option id="" value="sorted">Sorted</option>
+                <option id="" value="quick_sort">Quick Sort</option>
             </select>
             <button class="btn btn-primary mt-3 p-2" id="btn-ordenar" type="submit">Ordenar</button>
             <button class="btn btn-primary ms-3 mt-3 p-2" id="btn-misturar" type="submit">Misturar</button>
