--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <form action="" id="novoItem">
             <div class="mb-3">
                 <label for="formGroupExampleInput2" class="form-label">Valor</label>
-                <input type="text" class="form-control" id="elemento" placeholder="">
+                <input type="text" class="form-control" id="elemento" placeholder="" onfocus="this.value='';">
             </div>
             <button class="btn btn-primary p-2 mb-3" id="btn-adicionar" type="submit">Adicionar</button>
             <button class="btn btn-primary p-2 mb-3" id="btn-limpar" type="submit">Limpar</button>
