--- a/VueJS/usuarios.html
+++ b/VueJS/usuarios.html
@@ -5,24 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://reqres.in/">
+    
     <title>Usuários</title>
 </head>
 <body class="container bg-warning">
     <h1>Usuários de Teste via REST</h1>
-    <div id="fetch">
-        <div v-for="user in users" :key="user.id">
-            <div class="card p-2 m-3">
-                <div id="usuarios card-body" class="container-fluid">
-                    <div class="row">
-                        <div class="card-img-top" :src="user.avatar">
-                        </div>
-                        <div class="card-title">
-                            {{user.first_name}} {{user.last_name}}
-                        </div>
-                        <div class="card-text">
-                            {{user.email}}
-                        </div>
+    <div id="usuarios" class="row justify-content-center">
+        <div v-for="(user,index) in users.data" :key="" class="col-3 p-2 m-3">
+            <div class=" card ">
+                <div id="card-body" class=" p-0">
+                    <img class="card-img-top p-2" :src="user.avatar">
+                    <div class="card-title ps-2 ms-3 fs-5 fw-bold" >
+                        {{user.last_name}} {{user.first_name}}
+                    </div>
+                    <div class="card-text ps-2 mb-3 ms-3">
+                        {{user.email}} 
                     </div>
                 </div>
             </div>
@@ -30,6 +27,21 @@
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script> 
     <script src="https://cdn.jsdelivr.net/npm/vue@2.6.14/dist/vue.js"></script>
-    <script src="usuarios.js"></script>
+    <script >
+        let app = new Vue({
+            el: '#usuarios',
+            data:{
+                users: [],
+            },
+            async created(){
+                await fetch('https://reqres.in/api/users?per_page=10')
+                    .then(response => {
+                        response.json().then(atributo => {
+                            this.users = atributo;
+                        })
+                })
+            }
+        })
+    </script>
 </body>
 </html>
